adding the java version  to 21